snake overflow fix

--- a/client/src/components/snakeGame/snake.scss
+++ b/client/src/components/snakeGame/snake.scss
@@ -10,7 +10,6 @@ $snake-body-color: $pWhite;
     display: grid;
     grid-template-columns: repeat($playground-width, 1fr);
     grid-template-rows: repeat($playground-height, 1fr);
-    position: absolute;
     height: 600px;
     width: 600px;
     background-color: $playground-background;
